[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://background/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pause.gd" type="Script" id=4]
[ext_resource path="res://question_display/question_popup.tscn" type="PackedScene" id=5]

[node name="Game" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="bg1" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[node name="gem_container" type="Node" parent="."]

[node name="coin_container" type="Node" parent="."]

[node name="tree_container" type="Node" parent="."]

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 2035.33, 1073.95 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
visible = false
margin_right = 797.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.392157 )


[node name="question_popup_container" parent="." index="6" instance=ExtResource( 5 )]
